[gd_scene load_steps=9 format=2]

[ext_resource path="res://challenges/week13/gfx/ball/ball.webp" type="Texture" id=1]
[ext_resource path="res://challenges/week13/scenes/ball/ball.gd" type="Script" id=2]
[ext_resource path="res://common/sfx/clics/click_key.wav" type="AudioStream" id=3]
[ext_resource path="res://common/sfx/ball/ball_in_hole.mp3" type="AudioStream" id=4]
[ext_resource path="res://common/gfx/arrow/arrow.webp" type="Texture" id=5]

[sub_resource type="PhysicsMaterial" id=2]
bounce = 0.6

[sub_resource type="CircleShape2D" id=3]
radius = 8.0

[sub_resource type="CircleShape2D" id=4]
radius = 3.0

[node name="ball" type="RigidBody2D"]
input_pickable = true
physics_material_override = SubResource( 2 )
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="hole_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hole_area"]
shape = SubResource( 4 )

[node name="WallSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="InHoleSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="direction" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.5 )
texture = ExtResource( 5 )
offset = Vector2( 0, -32 )

[connection signal="body_entered" from="." to="." method="_on_ball_body_entered"]
[connection signal="input_event" from="." to="." method="_on_ball_input_event"]
